--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 <body>
     <!-- Barra superior con logo y menú -->
     <div class="barra-superior">
-        <img src="logo.png" alt="Logo Constructora Espiino" class="logo">
-        <nav>
-            <ul>
-                <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
+    <img src="logo.png" alt="Logo Constructora Espiino" class="logo">
+    <button class="menu-hamburguesa" aria-label="Abrir menú">&#9776;</button>
+    <nav class="menu">
+        <ul>
+            <li><a href="#sobre-nosotros">Sobre Nosotros</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#proyectos">Proyectos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
     </div>
 
     <header>
