--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="carrusel-fondo">
     <div class="carrusel-inner">
         <div class="carrusel-item active">
-            <img src="carrusel/carrusel1.jpg" alt="Proyecto 1">
+            <img src="carrusel1.jpg" alt="Proyecto 1">
         </div>
         <div class="carrusel-item">
-            <img src="carrusel/carrusel2.jpg" alt="Proyecto 2">
+            <img src="carrusel2.jpg" alt="Proyecto 2">
         </div>
         <div class="carrusel-item">
-            <img src="carrusel/carrusel3.jpg" alt="Proyecto 3">
+            <img src="carrusel3.jpg" alt="Proyecto 3">
         </div>
     </div>
 </div>
@@ -50,7 +50,7 @@
         <div class="sobre-nosotros-container">
             <div class="integrante">
                 <div class="foto-marco">
-                    <img src="integrantes/integrante1.jpg" alt="Integrante 1">
+                    <img src="integrante1.jpg" alt="Integrante 1">
                 </div>
                 <h3>Nombre Apellido</h3>
                 <p>Breve descripción de la persona. EJEMPLO:Nombre - Ingeniero Civil
@@ -58,7 +58,7 @@ Profesional con más de 10 años de experiencia en dirección de proyectos de co
             </div>
             <div class="integrante">
                 <div class="foto-marco">
-                    <img src="integrantes/integrante2.jpg" alt="Integrante 2">
+                    <img src="integrante2.jpg" alt="Integrante 2">
                 </div>
                 <h3>Nombre Apellido</h3>
                 <p>Breve descripción de la persona. EJEMPLO:Nombre - Ingeniero Civil
@@ -77,7 +77,7 @@ Profesional con más de 10 años de experiencia en dirección de proyectos de co
         <!-- Servicio 1 -->
         <div class="servicio" onclick="toggleInfo(this)">
             <div class="servicio-header">
-                <img src="iconos/arquitectura.png" alt="Arquitectura">
+                <img src="arquitectura.png" alt="Arquitectura">
                 <h3>Servicio 1</h3>
             </div>
             <div class="servicio-info">
@@ -88,7 +88,7 @@ Profesional con más de 10 años de experiencia en dirección de proyectos de co
         <!-- Servicio 2 -->
         <div class="servicio" onclick="toggleInfo(this)">
             <div class="servicio-header">
-                <img src="iconos/construccion.png" alt="Construcción">
+                <img src="construccion.png" alt="Construcción">
                 <h3>Construcción</h3>
             </div>
             <div class="servicio-info">
@@ -99,7 +99,7 @@ Profesional con más de 10 años de experiencia en dirección de proyectos de co
         <!-- Servicio 3 -->
         <div class="servicio" onclick="toggleInfo(this)">
             <div class="servicio-header">
-                <img src="iconos/remodelacion.png" alt="Remodelación">
+                <img src="remodelacion.png" alt="Remodelación">
                 <h3>Remodelaciones</h3>
             </div>
             <div class="servicio-info">
@@ -115,25 +115,25 @@ Profesional con más de 10 años de experiencia en dirección de proyectos de co
     <div class="grid">
         <div class="proyecto">
             <a href="proyecto1.html" target="_blank">
-                <img src="portproyecto/proyecto1.jpg" alt="Edificio moderno">
+                <img src="proyecto1.jpg" alt="Edificio moderno">
                 <h3>Remodelacion de baño</h3>
             </a>
         </div>
         <div class="proyecto">
             <a href="proyecto2.html" target="_blank">
-                <img src="portproyecto/proyecto2.jpg" alt="Vivienda residencial">
+                <img src="proyecto2.jpg" alt="Vivienda residencial">
                 <h3>proyecto 2</h3>
             </a>
         </div>
         <div class="proyecto">
             <a href="proyecto3.html" target="_blank">
-                <img src="portproyecto/proyecto3.jpg" alt="Centro comercial">
+                <img src="proyecto3.jpg" alt="Centro comercial">
                 <h3>proyecto 3</h3>
             </a>
         </div>
         <div class="proyecto">
             <a href="proyecto4.html" target="_blank">
-                <img src="portproyecto/proyecto4.jpg" alt="Obra en construcción">
+                <img src="proyecto4.jpg" alt="Obra en construcción">
                 <h3>Obra en Desarrollo</h3>
             </a>
         </div>
@@ -172,9 +172,9 @@ Profesional con más de 10 años de experiencia en dirección de proyectos de co
             </div>
             <div class="redes-sociales">
                 <h4>Síguenos en redes sociales:</h4>
-                <a href="https://www.facebook.com/FNPConstruccion" target="_blank"><img src="iconos/facebook-icon.png" alt="Facebook"></a>
-                <a href="https://instagram.com" target="_blank"><img src="iconos/instagram-icon.png" alt="Instagram"></a>
-                <a href="https://linkedin.com" target="_blank"><img src="iconos/linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="https://www.facebook.com/FNPConstruccion" target="_blank"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="https://instagram.com" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+                <a href="https://linkedin.com" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a>
             </div>
         </div>
     </div>
