--- a/proyecto1.html
+++ b/proyecto1.html
@@ -29,11 +29,11 @@
             <h2>Antes y Después</h2>
             <div class="grid-antes-despues">
                 <div class="antes">
-                    <img src="baño/antes.jpg" alt="Baño antes de la remodelación">
+                    <img src="antes.jpg" alt="Baño antes de la remodelación">
                     <p><strong>Antes:</strong> El baño original con diseño anticuado y problemas de espacio.</p>
                 </div>
                 <div class="despues">
-                    <img src="baño/despues.jpg" alt="Baño después de la remodelación">
+                    <img src="despues.jpg" alt="Baño después de la remodelación">
                     <p><strong>Después:</strong> Un baño moderno con acabados de lujo y mejor aprovechamiento del espacio.</p>
                 </div>
             </div>
@@ -52,16 +52,16 @@
             <h2>Galería de Fotos</h2>
             <div class="grid-galeria">
                 <div class="imagen-contenedor">
-                    <img src="baño/foto1.jpg" alt="Foto 1 del proyecto" class="imagen-galeria">
+                    <img src="foto1.jpg" alt="Foto 1 del proyecto" class="imagen-galeria">
                 </div>
                 <div class="imagen-contenedor">
-                    <img src="baño/foto2.jpg" alt="Foto 2 del proyecto" class="imagen-galeria">
+                    <img src="foto2.jpg" alt="Foto 2 del proyecto" class="imagen-galeria">
                 </div>
                 <div class="imagen-contenedor">
-                    <img src="baño/foto3.jpg" alt="Foto 3 del proyecto" class="imagen-galeria">
+                    <img src="foto3.jpg" alt="Foto 3 del proyecto" class="imagen-galeria">
                 </div>
                 <div class="imagen-contenedor">
-                    <img src="baño/foto4.jpg" alt="Foto 4 del proyecto" class="imagen-galeria">
+                    <img src="foto4.jpg" alt="Foto 4 del proyecto" class="imagen-galeria">
                 </div>
             </div>
         </div>
